--- a/src/main/resources/templates/payment/addAllBatchPayment.html
+++ b/src/main/resources/templates/payment/addAllBatchPayment.html
@@ -92,13 +92,13 @@
               </div >
             </div >
             <div class="col-6" >
-              <span>Size [[${#lists.size(batchStudent.payments)}]] </span>
               <div class="container-fluid" >
                 <table class="table table-striped table-inverse table-responsive"
                        data-th-id="${'tb'+batchIndex.index}" >
                   <thead class="thead-inverse" >
                   <tr >
                     <th >Month</th >
+                    <th >Year</th >
                     <th >Amount</th >
                     <th >Payment Status</th >
                   </tr >
@@ -114,6 +114,12 @@
                              data-th-field="*{batchStudents[__${batchIndex.index}__].payments[__${paymentIndex.index}__].month}"
                              readonly required >
                     </td >
+                    <td>
+                    <!--  year-->
+                      <input type="text" class="form-control"
+                             data-th-field="*{batchStudents[__${batchIndex.index}__].payments[__${paymentIndex.index}__].year}"
+                             readonly required >
+                    </td>
                     <td data-th-if="${!#strings.equals(payment.paymentStatus, 'PAID')}" >
                       <!--amount-->
                       <input type="text" class="form-control" data-th-id="${'vl'+paymentIndex.index}"
