completed up to 18.04.2021

--- a/src/main/resources/templates/role/role.html
+++ b/src/main/resources/templates/role/role.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head   data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Thymeleaf Springboot </title>
+    <title>Success Educational Institute</title>
 </head>
 <body>
 <nav   data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
