--- a/src/main/resources/templates/batchExam/batchExam-detail.html
+++ b/src/main/resources/templates/batchExam/batchExam-detail.html
@@ -14,16 +14,16 @@
 
   </div >
   <div class="col-4" >
-    <h1 >Subject Details</h1 >
+    <h1 >Exam Results</h1 >
   </div >
   <div class="col-4" >
     <a href="/batchExam/teacher" >
-      <button class="btn btn-primary" align="center" >Exams</button >
+      <button class="btn btn-primary" align="center" >View Exams</button >
     </a >
   </div >
 </div >
 <!--subject detail-->
-<div class=" row container-fluid" data-th-fragment="subjectDetail" >
+<div class=" row container-fluid" style="background-color: yellow" data-th-fragment="subjectDetail" >
   <div class="col-sm-6" >
     <div class="form-group" >
       <label data-th-for="${name}" class="col-sm-3 control-label" >Subject name</label >
@@ -44,7 +44,7 @@
 <!--teacher Detail-->
 <div class="container-fluid" >
   <div class="row" >
-    <div class="col  text-center" >
+    <div class="col-auto  text-center" >
       <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button"
          aria-expanded="false"
          aria-controls="multiCollapseExample1" >Teacher Details</a >
@@ -62,9 +62,9 @@
 </div >
 
 <!--Exam Result-->
-<div class="container-fluid" id="printContent">
+<div class="container" id="printContent">
   <div class="row">
-    <div class=" row container-fluid"  >
+    <div class=" row container"  >
       <div class="col-sm-6" >
         <div class="form-group" >
           <label data-th-for="${name}" class="col-sm-3 control-label" >Subject name</label >
@@ -77,47 +77,50 @@
         <div class="form-group" >
           <label data-th-for="${code}" class="col-sm-3 control-label" >Teacher Name</label >
           <div class="col-sm-6" >
-            <p type="text"  class="form-control" data-th-text="${teacherDetail.name}" >
+            <p type="text"  class="form-control" data-th-text="${teacherDetail.firstName}" >
           </div >
         </div >
       </div >
     </div >
   </div>
   <div class="row" >
-    <table class="table table-striped table-inverse " id="myTable" >
-      <thead class="thead-inverse" >
-      <tr >
-        <th >Index</th >
-        <th >Student Name</th >
-        <th >Exam Code</th >
-        <th >Attendance</th >
-        <th >Mark</th >
-        <th >Result Grade</th >
-      </tr >
-      </thead >
-      <tbody >
-      <tr data-th-each="batchStudentExamResult, index : ${batchExamDetail.batchStudentExamResults}" >
-        <td data-th-text="${index.count}" ></td >
-        <td data-th-text="${batchStudentExamResult.batchStudent.student.firstName}" ></td >
-        <td data-th-text="${batchStudentExamResult.code}" ></td >
-        <td data-th-text="${batchStudentExamResult.attendanceStatus.attendanceStatus}" ></td >
-        <td data-th-text="${batchStudentExamResult.mark}" ></td >
-        <td data-th-text="${batchStudentExamResult.resultGrade.resultGrade}" >
-        </td >
-      </tr >
-      </tbody >
-    </table >
+    <div class="container-fluid">
+      <table class="table table-striped table-inverse " id="myTable" >
+        <thead class="thead-inverse" >
+        <tr >
+          <th >Index</th >
+          <th >Student Name</th >
+          <th >Exam Code</th >
+          <th >Attendance</th >
+          <th >Mark</th >
+          <th >Result Grade</th >
+        </tr >
+        </thead >
+        <tbody >
+        <tr data-th-each="batchStudentExamResult, index : ${batchExamDetail.batchStudentExamResults}" >
+          <td data-th-text="${index.count}" ></td >
+          <td data-th-text="${batchStudentExamResult.batchStudent.student.firstName}" ></td >
+          <td data-th-text="${batchStudentExamResult.code}" ></td >
+          <td data-th-text="${batchStudentExamResult.attendanceStatus.attendanceStatus}" ></td >
+          <td data-th-text="${batchStudentExamResult.mark}" ></td >
+          <td data-th-text="${batchStudentExamResult.resultGrade.resultGrade}" >
+          </td >
+        </tr >
+        </tbody >
+      </table >
+    </div>
+
   </div >
 </div >
 <!--Back Button-->
 <div class="form-group col-md-12 col-sm-12 mt-2 text-center flex-column " >
   <a href="/batchExam" >
-    <button class="btn btn-dark" type="button" tabindex="3" >
+    <button class="btn btn-outline-dark" type="button" tabindex="3" >
       <i class="fas fa-arrow-circle-left" style="font-size: 20px" ></i >&nbsp; &nbsp;Back
     </button >
   </a >
   <!--print button-->
-  <button class="btn btn-success" type="button" id="printButton" >
+  <button class="btn btn-outline-success" type="button" id="printButton" >
     <i class="fa fa-print" style="font-size: 20px" ></i >
     Print
   </button >
