--- a/src/main/resources/templates/timeTable/dateChooser.html
+++ b/src/main/resources/templates/timeTable/dateChooser.html
@@ -9,19 +9,20 @@
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
-<div class="row bg-secondary" >
+<div class="row bg-light" >
   <div class="col-4" >
-    <a href="/timeTable/add" >
-      <button class="btn btn-info" >New Time Slot Add</button >
-    </a >
+
   </div >
   <div class="col-4" >
-    <h1 >Choose Date To Time Table</h1 >
+    <h1 >Select the Date</h1 >
   </div >
   <div class="col-4" >
     <a href="/timeTable" >
-      <button class="btn btn-primary" >View All Student</button >
+      <button class="btn btn-primary" >View all Class Sessions</button >
     </a >
+<!--    <a href="/timeTable/add" >-->
+<!--      <button class="btn btn-outline-info" >Add New Time Slot</button >-->
+<!--    </a >-->
   </div >
 </div >
 <!--Student detail-->
