--- a/src/main/resources/templates/timeTable/timeTableView.html
+++ b/src/main/resources/templates/timeTable/timeTableView.html
@@ -9,7 +9,7 @@
 <!--Nav bar is included-->
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
 
-<div class="row bg-secondary" >
+<div class="row bg-light" >
   <div class="col-4" >
     <a href="/timeTable/add" >
       <button class="btn btn-primary" >New TimeTable</button >
