--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -47,7 +47,7 @@
                     <a data-sec-authorize="hasAnyAuthority('ROLE_ADMIN', 'ROLE_OFFICE_ASSISTANT')" class="dropdown-item" href="/school/add" >New School</a>
                     <a data-sec-authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_OFFICE_ASSISTANT')" class="dropdown-item" href="/hall/add">New Hall</a>
                     <a data-sec-authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_OFFICE_ASSISTANT')" class="dropdown-item" href="/subject/add">New Subject</a>
-                    <a data-sec-authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_MANAGER')" class="dropdown-item" href="	/employee/add	">	New Employee	</a>-->
+                    <a data-sec-authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_MANAGER')" class="dropdown-item" href="	/employee/add	">	New Employee	</a>
                     <a data-sec-authorize="hasAnyAuthority('ROLE_STUDENT','ROLE_TEACHER', 'ROLE_OFFICE_ASSISTANT')" class="dropdown-item" href="	/payment/needToPay	">	New Payment 	</a>
                     <a data-sec-authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_MANAGER')" class="dropdown-item" href="	/role/add	">New System Role</a>
                     <a data-sec-authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_MANAGER')" class="dropdown-item" href="	/user/add	">	New User 	</a>
