batch exam report was completed

--- a/src/main/resources/templates/report/batchExamReport.html
+++ b/src/main/resources/templates/report/batchExamReport.html
@@ -449,7 +449,7 @@
         <div class="collapse" data-th-id="${'amList'+ index.index}" >
           <div class="card card-body bg-success" >
             <div class="container-fluid" >
-              <h5 class="text-center p-2 btn-block bg-secondary text-white" >A Student List </h5 >
+              <h5 class="text-center p-2 btn-block bg-secondary text-white" >A Minus Student List </h5 >
             </div >
             <div class="container-fluid" >
               <table class="table table-striped table-inverse"
