1.Exam vs Classes 2.ExamResults vs Student 3.ExamResult vs Classes 4.Class vs Student 5.Employee vs role 6.Subject vs Teacher 7.teacher vs Classes 8.hall vs timeTable 9.student vs attendance 10.class vs payments 11.payment vs student 12.payment vs teacher 13.hall vs classes 14.user > Teacher > Student > Office assistant 15.employee + user
---------Need to create reports for above relationships -------------

this errr=or line

"batchAmount.teacher.fee" (template: "report/incomeReport" - line 104, col 15)

--- a/src/main/resources/templates/batch/batch.html
+++ b/src/main/resources/templates/batch/batch.html
@@ -3,7 +3,7 @@
 <!--Styles, meta data, and title are included-->
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>Thymeleaf Springboot </title>
+    <title>Success Educational Institute</title>
 </head>
 <body>
 <!--Nav bar is included-->
