--- a/src/main/resources/templates/fragments/navBar.html
+++ b/src/main/resources/templates/fragments/navBar.html
@@ -60,9 +60,9 @@
                     Reports
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink3">
-                    <a data-sec-authorize="hasAnyAuthority('ROLE_SQA','ROLE_QA','ROLE_TM', 'ROLE_LA')" class="dropdown-item" href="/report/labTestName">Lab Test Name Report</a>
-                    <a data-sec-authorize="hasAnyAuthority('ROLE_CA','ROLE_ACC')" class="dropdown-item" href="/report/income">Income Report</a>
-                    <a data-sec-authorize="hasAnyAuthority('ROLE_CA','ROLE_ACC')" class="dropdown-item" href="/report/customer">Customer Report</a>
+                    <a data-sec-authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_MANAGER')" class="dropdown-item" href="/report/income">Income Report</a>
+                    <a data-sec-authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_MANAGER')" class="dropdown-item" href="/report/batchExam">Exam Report</a>
+                    <a data-sec-authorize="hasAnyAuthority('ROLE_ADMIN','ROLE_MANAGER')" class="dropdown-item" href="/report/stduent">Student Report</a>
                     <a data-sec-authorize="hasAnyAuthority('ROLE_SQA','ROLE_QA','ROLE_TM', 'ROLE_LA')" class="dropdown-item" href="/report/compound">Compound Report</a>
                 </div>
             </li>
