--- a/src/main/resources/templates/student/student-detail.html
+++ b/src/main/resources/templates/student/student-detail.html
@@ -225,7 +225,7 @@
         </div >
         <div class="row" >
           <div class="container" >
-            <table class="table table-striped table-inverse " >
+            <table data-th-if="${batchStudent.timeTableStudentAttendances != null}" class="table table-striped table-inverse " >
               <thead class="thead-inverse" >
               <tr >
                 <th >Index</th >
@@ -241,7 +241,7 @@
                 <td data-th-text="${timeTableStudentAttendance.timeTable.code}" ></td >
                 <td data-th-text="${timeTableStudentAttendance.code}" ></td >
                 <td data-th-text="${'Start At '+#temporals.format(timeTableStudentAttendance.timeTable.startAt, 'dd-MM-yyyy HH:mm')+ ' End At '+#temporals.format(timeTableStudentAttendance.timeTable.endAt, 'dd-MM-yyyy HH:mm')}" ></td >
-                <td data-th-text="${batchStudentExamResult.attendanceStatus.attendanceStatus}" ></td >
+                <td data-th-text="${timeTableStudentAttendance.attendanceStatus.attendanceStatus}" ></td >
               </tr >
               </tbody >
             </table >
