--- a/src/main/resources/templates/timeTable/timeTable.html
+++ b/src/main/resources/templates/timeTable/timeTable.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="container-fluid">
-    <table class="table table-striped table-inverse table-responsive" data-th-fragment="timeTable" id="myTable">
+    <table class="table table-striped table-inverse" data-th-fragment="timeTable" id="myTable">
         <thead class="thead-inverse">
         <tr>
             <th>Index</th>
@@ -51,6 +51,7 @@
             <td data-th-text="${timeTable.batch.name}"></td>
             <td>
                 <a data-th-href="${'/timeTable/view/'+ timeTable.id}"><button class="btn btn-info">View</button></a>
+                <a data-th-href="${'/timeTable/delete/'+ timeTable.id}"><button class="btn btn-danger">Delete</button></a>
             </td>
         </tr>
         </tbody>
