payment report issue was fixed

--- a/src/main/resources/templates/report/incomeReport.html
+++ b/src/main/resources/templates/report/incomeReport.html
@@ -128,7 +128,7 @@
         </thead >
         <tbody >
         <tr data-th-each="studentAmount : ${studentAmounts}">
-          <td data-th-text="${studentAmount.student.name}"></td >
+          <td data-th-text="${studentAmount.student.firstName}"></td >
           <td data-th-text="${studentAmount.count}"></td >
           <td data-th-text="${studentAmount.amount}"></td >
         </tr >
